[package]
name = "rose"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_4"] }
relm4-macros = { version = "0.9.0", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vte = { version = "0.8.0", package = "vte4" }
